# telecom-p1

./: .gitignore  CMakeLists.txt  README.md  config.hpp  main.cpp  main.py  main_pyaudio.py  modem.py  requirements.in  requirements.txt  run-grader  serial.hpp  serial_linux.cpp  serial_windows.cpp  uart.cpp  uart.hpp  v21.cpp  v21.hpp
.github/workflows/: main.yml
